fixed z-index problem with edit profile form

--- a/app/assets/stylesheets/stream.scss
+++ b/app/assets/stylesheets/stream.scss
@@ -43,6 +43,7 @@
   color: white;
   border-style: none;
   z-index: 0;
+  cursor: pointer;
 }
 
 
