--- a/app/assets/stylesheets/track-show-page.scss
+++ b/app/assets/stylesheets/track-show-page.scss
@@ -25,6 +25,7 @@
   color: white;
   font-size: 30px;
   border-style: none;
+  cursor: pointer;
 }
 
 #play-button-large:hover {
